--- a/docs/second-order-ODEs-analytical.ipynb
+++ b/docs/second-order-ODEs-analytical.ipynb
@@ -17,6 +17,8 @@
     "then you can solve by **direct integration**.\n",
     "\n",
     "For example, let's say we are trying to solve for the deflection of a cantilever beam $y(x)$ with a force $P$ at the end, where $E$ is the modulus and $I$ is the moment of intertia, and the initial conditions are $y(0)=0$ and $y^{\\prime}(0) = 0$:\n",
+    "![Cantilever beam with force at end](images/cantilever.png \"Cantilever beam\")\n",
+    "\n",
     "\\begin{align}\n",
     "\\frac{d^2 y}{dx^2} &= \\frac{-P (L-x)}{EI} \\\\\n",
     "\\frac{d}{dx} \\left(\\frac{dy}{dx}\\right) &= \\frac{-P}{EI} (L-x) \\\\\n",
@@ -111,6 +113,9 @@
     "\\begin{equation}\n",
     "y^{\\prime\\prime} = \\sqrt{1 + (y^{\\prime})^2}\n",
     "\\end{equation}\n",
+    "\n",
+    "![Catenary problem (hanging rope/chain)](images/catenary.png \"Catenary problem\")\n",
+    "\n",
     "This is actually a **boundary value problem**, with the boundary conditions for the displacement at one side $y(0) = 0$ and that the slope is zero in the middle: $\\frac{dy}{dx}\\left(\\frac{L}{2}\\right) = 0$. (Please note that I have skipped the derivation of the governing equation, and left some details out.)\n",
     "\n",
     "We can solve this via substitution, by letting a new variable $u = y^{\\prime}$; then, $u^{\\prime} = \\frac{du}{dx} = y^{\\prime\\prime}$. This gives is a first-order ODE, which we can integrate:\n",
@@ -181,7 +186,100 @@
     "\\end{equation}\n",
     "\"Homogeneous\" means that the ODE is unforced; that is, the right-hand side is zero.\n",
     "\n",
-    "Depending on what $p(x)$ and $q(x)$ look like, "
+    "Depending on what $p(x)$ and $q(x)$ look like, we have a few different solution approaches:\n",
+    "\n",
+    "- constant coefficients: $y^{\\prime\\prime} + a y^{\\prime} + by = 0$\n",
+    "- Euler-Cauchy equations: $x^2 y^{\\prime\\prime} + axy^{\\prime} + by = 0$\n",
+    "- Series solutions\n",
+    "\n",
+    "First, let's talk about the characteristics of linear, homogeneous 2nd-order ODEs:\n",
+    "\n",
+    "#### Solutions have two parts: \n",
+    "Solutions have two parts: $y(x) = c_1 y_1 + c_2 y_2$, where $y_1$ and $y_2$ are each a basis of the solution.\n",
+    "\n",
+    "#### Linearly independent:\n",
+    "\n",
+    "The two parts of the solution $y_1$ and $y_2$ are linearly independent.\n",
+    "\n",
+    "One way of defining this is that $a_1 y_1 + a_2 y_2 = 0$ only has the trivial solution $a_1=0$ and $a_2=0$.\n",
+    "\n",
+    "Another way of thinking about this is that $y_1$ and $y_2$ are linearly *dependent* if one is a multiple of the other, like $y_1 = x$ and $y_2 = 5x$. This *cannot* be solutions to a linear, homogeneous ODE.\n",
+    "\n",
+    "#### Both parts satisfy the ODE:\n",
+    "\n",
+    "$y_1$ and $y_2$ each satisfy the ODE. Meaning, you can plug each of them into the ODE for $y$ and obtain 0.\n",
+    "\n",
+    "However, we need both parts together to fully solve the ODE.\n",
+    "\n",
+    "#### Reduction of order: \n",
+    "\n",
+    "If $y_1$ is known, we can get $y_2$ by **reduction of order**. Let $y_2 = u y_1$, where $u$ is some unknown function of $x$. Then, put $y_2$ into the ODE $y^{\\prime}{\\prime} + p(x) y^{\\prime} + q(x) y = 0$:\n",
+    "\\begin{align}\n",
+    "y_2 &= u y_1 \\\\\n",
+    "y_2^{\\prime} &= u y_1^{\\prime} + u^{\\prime} y_1 \\\\\n",
+    "y_2^{\\prime\\prime} &= 2 u^{\\prime} y_1^{\\prime} + u^{\\prime\\prime} y_1 + u y_1^{\\prime\\prime} \\\\\n",
+    "\\rightarrow u^{\\prime\\prime} &= - \\left[ p(x) + \\left(\\frac{2 y_1^{\\prime}}{y_1}\\right) \\right] u^{\\prime}\n",
+    "\\text{or, } u^{\\prime\\prime} &= - \\left( g(x) \\right) u^{\\prime}\n",
+    "\\end{align}\n",
+    "Now, we have an ODE with only $u^{\\prime\\prime}$, $u^{\\prime}$, and some function $g(x)$—so we can solve by substitution! Let $u^{\\prime} = v$, and then we have $v^{\\prime} = -g(x) v$:\n",
+    "\\begin{align}\n",
+    "\\frac{dv}{dx} &= - \\left( p(x) + \\frac{2 y_1^{\\prime}}{y_1} \\right) v \\\\\n",
+    "\\int \\frac{dv}{v} &= - \\int \\left(p(x) + \\frac{2 y_1^{\\prime}}{y_1} \\right) dx \\\\\n",
+    "\\text{Recall } 2 \\frac{d}{dx} \\left( \\ln y_1 \\right) &= 2 \\frac{y_1^{\\prime}}{y_1} \\\\\n",
+    "\\therefore \\int \\frac{dv}{v} &= - \\int \\left(p(x) + 2 \\frac{d}{dx} \\left( \\ln y_1 \\right) \\right) dx \\\\\n",
+    "\\ln v &= -\\int p(x) dx - 2 \\ln y_1 \\\\\n",
+    "\\rightarrow v &= \\frac{\\exp\\left( -\\int p(x)dx \\right)}{y_1^2}\n",
+    "\\end{align}\n",
+    "\n",
+    "So, the actual solution procedure is then:\n",
+    "\n",
+    "  1. Solve for $v$: $v = \\frac{\\exp\\left( -\\int p(x)dx \\right)}{y_1^2}$\n",
+    "  2. Solve for $u$: $u = \\int v dx$\n",
+    "  3. Get $y_2$: $y_2 = u y_1$\n",
+    "  \n",
+    "Here's an example, where we know one part of the solution $y_1 = e^{-x}$:\n",
+    "\\begin{align}\n",
+    "y^{\\prime\\prime} + 2 y^{\\prime} + y &= 0 \\\\\n",
+    "\\text{Step 1:} \\quad v = \\frac{\\exp \\left( -\\int 2dx \\right)}{ \\left(e^{-x}\\right)^2} = \\frac{e^{-2x}}{e^{-2x}} &= 1 \\\\\n",
+    "\\text{Step 2:} \\quad u = \\int v dx = \\int 1 dx &= x \\\\\n",
+    "\\text{Step 3:} \\quad y_2 &= x e^{-x}\n",
+    "\\end{align}\n",
+    "Then, the general solution to the ODE is $y(x) = c_1 e^{-x} + c_2 x e^{-x}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3a. Equations with constant coefficents\n",
+    "\n",
+    "A common category of 2nd-order homogeneous ODEs are equations with constant coefficients, of the form:\n",
+    "\\begin{equation}\n",
+    "y^{\\prime\\prime} + a y^{\\prime} + by = 0\n",
+    "\\end{equation}\n",
+    "Note that these are unforced, and the right-hand side is zero.\n",
+    "\n",
+    "Solutions to these equations take the form $y(x) = e^{\\lambda x}$, and inserting this into the ODE gives us the characteristic equation\n",
+    "\\begin{equation}\n",
+    "\\lambda^2 + a \\lambda + b = 0\n",
+    "\\end{equation}\n",
+    "which we can solve to find the solution for given coefficients $a$ and $b$ and initial conditions. Depending on those coefficients and the solution to the characteristic equation, our solution can fall into one of three cases:\n",
+    "\n",
+    "* Case 1: real roots $\\lambda_1$ and $\\lambda_2$. This is an **overdamped** system and the full solution takes the form\n",
+    "\\begin{equation}\n",
+    "y(x) = c_1 e^{\\lambda_1 x} + c_2 e^{\\lambda_2 x}\n",
+    "\\end{equation}\n",
+    "\n",
+    "* Case 2: repeated roots $\\lambda_1 = \\lambda_2 = \\lambda$. This is a **critically damped** system and the full solution is\n",
+    "\\begin{equation}\n",
+    "y(x) = c_1 e^{\\lambda x} + c_2 x e^{\\lambda x}\n",
+    "\\end{equation}\n",
+    "(Where does that second part come from, you might ask? Well, we know that $y_1$ is $e^{\\lambda x}$, but the second part cannot also be $e^{\\lambda x}$ because those are linearly dependent. So, we use *reduction of order* to find $y_2$, which is $x e^{\\lambda x}$.\n",
+    "\n",
+    "* Case 3: imaginary roots $\\lambda = \\frac{-a}{2} \\pm \\beta i$, where $\\beta = \\frac{1}{2} \\sqrt{4b - a^2}$. This is an **underdamped** system and the solution takes the form\n",
+    "\\begin{equation}\n",
+    "y(x) = e^{-ax/2} \\left( c_1 \\sin \\beta x + c_2 \\cos \\beta x \\right)\n",
+    "\\end{equation}"
    ]
   },
   {
