more work on 2nd order module

--- a/docs/second-order-ODEs-analytical.ipynb
+++ b/docs/second-order-ODEs-analytical.ipynb
@@ -265,21 +265,75 @@
     "\\end{equation}\n",
     "which we can solve to find the solution for given coefficients $a$ and $b$ and initial conditions. Depending on those coefficients and the solution to the characteristic equation, our solution can fall into one of three cases:\n",
     "\n",
-    "* Case 1: real roots $\\lambda_1$ and $\\lambda_2$. This is an **overdamped** system and the full solution takes the form\n",
+    "* Real roots: $\\lambda_1$ and $\\lambda_2$. This is an **overdamped** system and the full solution takes the form\n",
     "\\begin{equation}\n",
     "y(x) = c_1 e^{\\lambda_1 x} + c_2 e^{\\lambda_2 x}\n",
     "\\end{equation}\n",
     "\n",
-    "* Case 2: repeated roots $\\lambda_1 = \\lambda_2 = \\lambda$. This is a **critically damped** system and the full solution is\n",
+    "* Repeated roots: $\\lambda_1 = \\lambda_2 = \\lambda$. This is a **critically damped** system and the full solution is\n",
     "\\begin{equation}\n",
     "y(x) = c_1 e^{\\lambda x} + c_2 x e^{\\lambda x}\n",
     "\\end{equation}\n",
     "(Where does that second part come from, you might ask? Well, we know that $y_1$ is $e^{\\lambda x}$, but the second part cannot also be $e^{\\lambda x}$ because those are linearly dependent. So, we use *reduction of order* to find $y_2$, which is $x e^{\\lambda x}$.\n",
     "\n",
-    "* Case 3: imaginary roots $\\lambda = \\frac{-a}{2} \\pm \\beta i$, where $\\beta = \\frac{1}{2} \\sqrt{4b - a^2}$. This is an **underdamped** system and the solution takes the form\n",
+    "* Imaginary roots: $\\lambda = \\frac{-a}{2} \\pm \\beta i$, where $\\beta = \\frac{1}{2} \\sqrt{4b - a^2}$. This is an **underdamped** system and the solution takes the form\n",
     "\\begin{equation}\n",
     "y(x) = e^{-ax/2} \\left( c_1 \\sin \\beta x + c_2 \\cos \\beta x \\right)\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "\n",
+    "Some examples:\n",
+    "\n",
+    "1. $y^{\\prime\\prime} + 3 y^{\\prime} + 2y = 0$\n",
+    "\\begin{align}\n",
+    "\\rightarrow \\lambda^2 + 3\\lambda + 2 &= 0 \\\\\n",
+    "(\\lambda + 2)(\\lambda + 1) &= 0 \\\\\n",
+    "\\lambda &= -2, -1 \\\\\n",
+    "y(x) &= c_1 e^{-x} + c_2 e^{-2x}\n",
+    "\\end{align}\n",
+    "Then, we would use the initial conditions given for $y(0)$ and $y^{\\prime}(0)$ to find $c_1$ and $c_2$.\n",
+    "\n",
+    "2. $y^{\\prime\\prime} + 6 y^{\\prime} + 9y = 0$\n",
+    "\\begin{align}\n",
+    "\\rightarrow \\lambda^2 + 6\\lambda + 9 &= 0 \\\\\n",
+    "(\\lambda + 3)(\\lambda + 3) &= 0 \\\\\n",
+    "\\lambda &= -3 \\\\\n",
+    "y(x) &= c_1 e^{-3x} + c_2 x e^{-3x}\n",
+    "\\end{align}\n",
+    "\n",
+    "3. $y^{\\prime\\prime} + 6 y^{\\prime} + 25 y = 0$\n",
+    "\\begin{align}\n",
+    "\\rightarrow \\lambda^2 + 6\\lambda + 25 &= 0 \\\\\n",
+    "\\lambda &= -3 \\pm 4i \\\\\n",
+    "y(x) &= e^{-3x} \\left( c_1 \\sin 4x + c_2 \\cos 4x \\right)\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3b. Euler-Cauchy equations\n",
+    "\n",
+    "Euler-Cauchy equations are of the form\n",
+    "\\begin{equation}\n",
+    "x^2 y^{\\prime\\prime} + axy^{\\prime} + by = 0\n",
+    "\\end{equation}\n",
+    "\n",
+    "Solutions take the form $y = x^m$, which when plugged into the ODE leads to a different characterisic equation to find $m$:\n",
+    "\\begin{align}\n",
+    "y &= x^m \\\\\n",
+    "y^{\\prime} &= m x^{m-1} \\\\\n",
+    "y^{\\prime\\prime} &= m (m-1) x^{m-2} \\\\\n",
+    "\\rightarrow x^2 m (m-1) x^{m-2} + axmx^{m-1} + bx^m &= 0 \\\\\n",
+    "m^2 + (a-1)m + b &= 0\n",
+    "\\end{align}\n",
+    "This is our new characteristic formula for these problems, and solving for the roots of this equation gives us $m$ and thus our general solution.\n",
+    "\n",
+    "Like equations with constant coefficients, we have three solution forms depending on the roots of the characteristic equation:\n",
+    "\n",
+    "* Real roots: $y(x) = c_1 x^{m_1} + c_2 x^{m_2}$\n",
+    "* Repeated roots: $y(x) = c_1 x^m + c_2 x^m \\ln x$\n",
+    "* Imaginary roots: $m = \\alpha \\pm \\beta i$, and $y(x) = x^{\\alpha} \\left[c_1 \\cos (\\beta \\ln x) + c_2 \\sin (\\beta \\ln x)\\right]$"
    ]
   },
   {
