finished 2nd-order analytical solutions

--- a/docs/second-order-ODEs-analytical.ipynb
+++ b/docs/second-order-ODEs-analytical.ipynb
@@ -337,11 +337,126 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 4. Inhomogeneous 2nd-order ODEs\n",
+    "\n",
+    "Inhomogeneous, or forced, 2nd-order ODEs with constant coefficients take the form\n",
+    "\\begin{equation}\n",
+    "y^{\\prime\\prime} + a y^{\\prime} + by = F(t)\n",
+    "\\end{equation}\n",
+    "with initial conditions $y(0) = y_0$ and $y^{\\prime}(0) = y_0^{\\prime}$. Depending on the form of the forcing function $F(t)$, we can solve with techniques such as\n",
+    "\n",
+    " - the method of undetermined coefficients\n",
+    " - variation of parameters\n",
+    " - LaPlace transforms\n",
+    "\n",
+    "The solution in general to inhomogeneous ODEs includes two parts:\n",
+    "\\begin{equation}\n",
+    "y(t) = y_{\\text{H}} + y_{\\text{IH}} = c_1 y_1 + c_2 y_2 + y_{\\text{IH}} \\;,\n",
+    "\\end{equation}\n",
+    "where $y_{\\text{H}}$ is the solution from the equivalent homogeneous ODE $y^{\\prime\\prime} + a y^{\\prime} + b y = 0$.\n",
+    "\n",
+    "The forcing function $F(t)$ may be \n",
+    "\n",
+    " - continuous\n",
+    " - periodic\n",
+    " - aperiodic/discontinuous\n",
+    " \n",
+    "### 4a. Continuous $F(t)$: method of undetermined coefficients\n",
+    "\n",
+    "For continuous forcing functions, we have two solution methods: the method of undetermined coefficients, and variation of parameters. \n",
+    "\n",
+    "Generally you'll want to use the method of undetermined coefficients when possible, which depends on if $F(t)$ matches one of a set of functions. In that case, the form of the inhomogeneous solution $y_{\\text{IH}}(t)$ follows that of the forcing function $F(t)$, with one or more unknown constants:\n",
+    "\n",
+    "| $F(t)$        | $y_{\\text{IH}}(t)$ |\n",
+    "| ------------- | :-------:|\n",
+    "| constant      | $K$ |\n",
+    "| $\\cos \\omega t$ | $K_1 \\cos \\omega t + K_2 \\sin \\omega t$ |\n",
+    "| $\\sin \\omega t$ | $K_1 \\cos \\omega t + K_2 \\sin \\omega t$ |\n",
+    "| $e^{-at}$ | $K e^{-at}$   |\n",
+    "| $(A) t$   | $K_0 + K_1 t$ |\n",
+    "| $t^n$     | $K_0 + K_1 t + K_2 t^2 + \\ldots + K_n t^n$|\n",
+    "\n",
+    "For combinations of these functions, we can combine functions; for example, given\n",
+    "\\begin{align}\n",
+    "F(t) &= e^{-at} \\cos \\omega t \\quad \\text{or} e^{-at} \\sin \\omega t \\\\\n",
+    "y_{\\text{IH}} &= K_1 e^{-at} \\cos \\omega t + K_2 e^{-at} \\sin \\omega t\n",
+    "\\end{align}\n",
+    "(Note how in all the above cases how the inhomogeneous solution follows the functional form of the forcing function; for example, the exponential decay rate $a$ or the sinusoidal frequency $\\omega$ match.\n",
+    "\n",
+    "The method of undetermined coefficients works by plugging the candidate inhomogeneous solutionn $y_{\\text{IH}}$ into the full ODE, and solving for the constants (e.g., $K$)—but **not** from the initial conditions.\n",
+    "\n",
+    "For example, let's solve\n",
+    "\\begin{equation}\n",
+    "y^{\\prime\\prime} + 2y^{\\prime} + y = e^{-x}\n",
+    "\\end{equation}\n",
+    "with initial conditions $y(0) = y^{\\prime}(0) = 0$. First, we should find the solution to the homogeneous equation\n",
+    "\\begin{equation}\n",
+    "y^{\\prime\\prime} + 2y^{\\prime} + y = 0 \\;.\n",
+    "\\end{equation}\n",
+    "We can do this by using the associated characteristic formula\n",
+    "\\begin{align}\n",
+    "\\lambda^2 + 2 \\lambda + 1 &= 0 \\\\\n",
+    "(\\lambda + 1)(\\lambda + 1) &= 0 \\\\\n",
+    "\\rightarrow y_{\\text{H}} &= c_1 e^{-x} + c_2 x e^{-x}\n",
+    "\\end{align}\n",
+    "\n",
+    "To find the inhomogeneous solution, we would look at the table above to find what matches the forcing function $e^{-x}$. Normally, we'd grab $K e^{-x}$, but that would not be linearly independent from the first part of the homogeneous solution $y_{\\text{H}}$. The same is true for $K x e^{-x}$, which is linearly dependent with the second part of $y_{\\text{H}}$, but $K x^2 e^{-x}$ works! Then, we just need to find $K$ by plugging this into the ODE:\n",
+    "\\begin{align}\n",
+    "y_{\\text{IH}} &= K x^2 e^{-x} \\\\\n",
+    "y^{\\prime} &= K e^{-x} (2x - x^2) \\\\\n",
+    "y^{\\prime\\prime} &= K e^{-x} (x^2 - 4x + 2) \\\\\n",
+    "2 K &= 1 \\\\\n",
+    "\\rightarrow K &= \\frac{1}{2} \\\\\n",
+    "y_{\\text{IH}} &= \\frac{1}{2} x^2 e^{-x}\n",
+    "\\end{align}\n",
+    "Thus, the overall general solution is \n",
+    "\\begin{equation}\n",
+    "y(x) = c_1 e^{-x} + c_2 x e^{-x} + \\frac{1}{2} x^2 e^{-x}\n",
+    "\\end{equation}\n",
+    "and we would solve for the integration constants $c_1$ and $c_2$ using the initial conditions.\n",
+    "\n",
+    "Important points to remember:\n",
+    "\n",
+    "- The constants of the inhomogeneous solution $y_{\\text{IH}}$ come from the ODE, **not** the initial conditions.\n",
+    "- Only solve for the integration constants $c_1$ and $c_2$ (part of the homogeneous solution) once you have the full general solution $y = c_1 y_1 + c_2 y_2 + y_{\\text{IH}}$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4b. Continuous $F(t)$: variation of parameters\n",
+    "\n",
+    "We have the variation of parameters approach to solve for inhomogeneous 2nd-order ODEs that are more general:\n",
+    "\\begin{equation}\n",
+    "y^{\\prime\\prime} + p(x) y^{\\prime} + q(x) y = r(x)\n",
+    "\\end{equation}\n",
+    "In this case, we can assume a solution $y(x) = y_1 u_1 + y_2 u_2$.\n",
+    "\n",
+    "The solution procedure is:\n",
+    "\n",
+    "1. Obtain $y_1$ and $y_2$ by solving the homogeneous equation: $y^{\\prime\\prime} + p(x) y^{\\prime} + q(x) y = 0$\n",
+    "\n",
+    "2. Solve for $u_1$ and $u_2$:\n",
+    "\\begin{align}\n",
+    "u_1 &= - \\int \\frac{y_2 r(x)}{W} dx + c_1 \\\\\n",
+    "u_2 &= \\int \\frac{y_1 r(x)}{W} dx + c_2 \\\\\n",
+    "W &= \\begin{vmatrix}\n",
+    "y_1 & y_2\\\\ y_1^{\\prime} & y_2^{\\prime}\\\\\n",
+    "\\end{vmatrix} = y_1 y_2^{\\prime} - y_2 y_1^{\\prime} \\;,\n",
+    "\\end{align}\n",
+    "where $W$ is the Wronksian.\n",
+    "\n",
+    "3. Then, we have the general solution:\n",
+    "\\begin{align}\n",
+    "y &= u_1 y_1 + u_2 y_2 \\\\\n",
+    "&= \\left( -\\int \\frac{y_2 r(x)}{W} dx + c_1 \\right) y_1 + \\left( \\int \\frac{y_1 r(x)}{W} dx + c_2 \\right) y_2 \\;,\n",
+    "\\end{align}\n",
+    "where we solve for $c_1$ and $c_2$ using the two initial conditions."
+   ]
   }
  ],
  "metadata": {
