some minor fixes

--- a/docs/first-order-numerical.ipynb
+++ b/docs/first-order-numerical.ipynb
@@ -7,15 +7,15 @@
     "# Numerical Solutions of 1st-order ODEs\n",
     "\n",
     "For numerically solving definite integrals ($\\int_a^b f(x) dx$) we have methods like the trapezoidal rule and Simpson's rule. When we need to solve 1st-order ODEs of the form\n",
-    "$$\n",
+    "\\begin{equation}\n",
     "y^{\\prime} = \\frac{dy}{dx} = f(x, y)\n",
-    "$$\n",
+    "\\end{equation}\n",
     "for $y(x)$, we need other methods. All of them will work by starting at the initial conditions, and then using information provided by the ODE to march forward in the solution, based on an increment (i.e., step size) $\\Delta x$.\n",
     "\n",
     "For example, let's say we want to solve \n",
-    "$$\n",
+    "\\begin{equation}\n",
     "\\frac{dy}{dx} = 4 x - \\frac{2 y}{x} \\;, \\quad y(1) = 1\n",
-    "$$\n",
+    "\\end{equation}\n",
     "This problem is fairly simple, and we can find the general and particular solutions to compare our numerical results against:\n",
     "\\begin{align}\n",
     "\\text{general: } y(x) &= x^2 + \\frac{x}{x^2} \\\\\n",
