--- a/docs/second-order-ODEs-analytical.ipynb
+++ b/docs/second-order-ODEs-analytical.ipynb
@@ -182,7 +182,7 @@
     "\n",
     "An important category of 2nd-order ODEs are those that look like\n",
     "\\begin{equation}\n",
-    "y^{\\prime}{\\prime} + p(x) y^{\\prime} + q(x) y = 0\n",
+    "y^{\\prime\\prime} + p(x) y^{\\prime} + q(x) y = 0\n",
     "\\end{equation}\n",
     "\"Homogeneous\" means that the ODE is unforced; that is, the right-hand side is zero.\n",
     "\n",
