first-order -> integral

--- a/docs/numerical-solution-error.ipynb
+++ b/docs/numerical-solution-error.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Numerical solutions to 1st-order ODEs and error\n",
+    "# Numerical integrals and error\n",
     "\n",
-    "What about when we cannot integrate a first-order ODE analytically? In other words, when there is no (obvious) closed-form solution. In these cases, we can use **numerical methods** to solve the problem.\n",
+    "What about when we cannot integrate a function analytically? In other words, when there is no (obvious) closed-form solution. In these cases, we can use **numerical methods** to solve the problem.\n",
     "\n",
     "Let's use this problem:\n",
     "\\begin{align}\n",
