adds some catenary problem details

--- a/docs/second-order-ODEs-analytical.ipynb
+++ b/docs/second-order-ODEs-analytical.ipynb
@@ -178,6 +178,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Please note that I've made some simplifications in the above work, and skipped the details of how the ODE is derived. In general, the solution for the shape is\n",
+    "\\begin{equation}\n",
+    "y(x) = C \\cosh \\frac{x + c_1}{C} + c_2\n",
+    "\\end{equation}\n",
+    "where you would solve for the constants $C$, $c_1$, and $c_2$ using the constraints:\n",
+    "\\begin{align}\n",
+    "\\int_{x_a}^{x_b} \\sqrt{1 + (y^{\\prime})^2} dx &= L \\\\\n",
+    "y(x_a) &= y_a \\\\\n",
+    "y(x_b) &= y_b \\;,\n",
+    "\\end{align}\n",
+    "where $L$ is the length of the rope/chain."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Homogeneous 2nd-order ODEs\n",
     "\n",
     "An important category of 2nd-order ODEs are those that look like\n",
