adds link to catenary article

--- a/docs/second-order-ODEs-analytical.ipynb
+++ b/docs/second-order-ODEs-analytical.ipynb
@@ -188,7 +188,9 @@
     "y(x_a) &= y_a \\\\\n",
     "y(x_b) &= y_b \\;,\n",
     "\\end{align}\n",
-    "where $L$ is the length of the rope/chain."
+    "where $L$ is the length of the rope/chain.\n",
+    "\n",
+    "You can read more about the catenary problem here (for example): <http://euclid.trentu.ca/aejm/V4N1/Chatterjee.V4N1.pdf>"
    ]
   },
   {
