adds stability module

--- a/docs/second-order-numerical.ipynb
+++ b/docs/second-order-numerical.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "This works for higher-order ODEs too! For example, if we have a 3rd-order ODE, we can transform it into a system of three 1st-order ODEs:\n",
     "\\begin{align}\n",
-    "\\frac{d^3 y}{dx^3} &= f(x, y, y^{\\prime}, y^{\\prime\\prime} \\\\\n",
+    "\\frac{d^3 y}{dx^3} &= f(x, y, y^{\\prime}, y^{\\prime\\prime}) \\\\\n",
     "\\rightarrow y^{\\prime} &= u \\\\\n",
     "u^{\\prime} &= y^{\\prime\\prime} = w \\\\\n",
     "w^{\\prime} &= y^{\\prime\\prime\\prime} = f(x, y, u, w)\n",
