--- a/docs/second-order-ODEs-analytical.ipynb
+++ b/docs/second-order-ODEs-analytical.ipynb
@@ -474,7 +474,62 @@
     "y &= u_1 y_1 + u_2 y_2 \\\\\n",
     "&= \\left( -\\int \\frac{y_2 r(x)}{W} dx + c_1 \\right) y_1 + \\left( \\int \\frac{y_1 r(x)}{W} dx + c_2 \\right) y_2 \\;,\n",
     "\\end{align}\n",
-    "where we solve for $c_1$ and $c_2$ using the two initial conditions."
+    "where we solve for $c_1$ and $c_2$ using the two initial conditions.\n",
+    "\n",
+    "#### Example 1: variation of parameters\n",
+    "\n",
+    "First, let's try the same example we used for the method of undetermined coefficients above:\n",
+    "\\begin{equation}\n",
+    "y^{\\prime\\prime} + 2 y^{\\prime} + y = e^{-x}\n",
+    "\\end{equation}\n",
+    "We already found the homogeneous solution, so we know that $y_1 = e^{-x}$ and $y_2 = x e^{-x}$.\n",
+    "Next, let's get the Wronksian, and then $u_1$ and $u_2$.\n",
+    "\\begin{align}\n",
+    "W &= \\begin{vmatrix} y_1 & y_2 \\\\ y_1^{\\prime} & y_2^{\\prime} \\end{vmatrix} = e^{-x} e^{-x}(1-x) - x e^{-x} (-e^{-x}) = e^{-2x} \\\\\n",
+    "%\n",
+    "u_1 &= -\\int \\frac{x e^{-x} e^{-x}}{e^{-2x}} dx + c_1 = -\\int x dx + c_1 = -\\frac{1}{2} x^2 + c_1 \\\\\n",
+    "u_2 &= \\int \\frac{e^{-x} e^{-x}}{e^{-2x}} dx + c_2 = \\int dx + c_2 = x + c_2 \\\\\n",
+    "y(x) &= \\left(-\\frac{1}{2} x^2 + c_1\\right) e^{-x} + (x + c_2) x e^{-x} \\\\\n",
+    "\\end{align}\n",
+    "After simplifying, we obtain the same solution as via the method of undetermined coefficients (but with a bit more work):\n",
+    "\\begin{equation}\n",
+    "y(x) = x_1 e^{-x} + c_2 x e^{-x} + \\frac{1}{2} x^2 e^{-x}\n",
+    "\\end{equation}\n",
+    "\n",
+    "#### Example 2: variation of parameters\n",
+    "\n",
+    "Now let's try an example that we could *not* solve using the method of undetermined coefficients, with a forcing term that involves hyperbolic cosine (cosh); recall that $\\cosh(x) = \\frac{e^x + e^{-x}}{2}$.\n",
+    "\\begin{equation}\n",
+    "y^{\\prime\\prime} + 4 y^{\\prime} + 4y = \\cosh(x)\n",
+    "\\end{equation}\n",
+    "First, we need to find the homogeneous solution:\n",
+    "\\begin{align}\n",
+    "y^{\\prime\\prime} + 4 y^{\\prime} + 4y &= 0 \\\\\n",
+    "\\lambda^2 + 4 \\lambda + 4 &= 0 \\\\\n",
+    "\\rightarrow \\lambda &= -2\n",
+    "\\end{align}\n",
+    "So our homogeneous solution involves repeated roots:\n",
+    "\\begin{equation}\n",
+    "y_H = c_1 e^{-2x} + c_2 x e^{-2x}\n",
+    "\\end{equation}\n",
+    "where $y_1 = e^{-2x}$ and $y_2 = x e^{-2x}$.\n",
+    "\n",
+    "Then, we need to find $u_1$ and $u_2$, so let's get the Wronksian and then solve\n",
+    "\\begin{align}\n",
+    "W &= \\begin{vmatrix} y_1 & y_2 \\\\ y_1^{\\prime} & y_2^{\\prime} \\end{vmatrix} = e^{-2x} (e^{-2x}) (1 - 2x) - x e^{-2x}(-2 e^{-2x}) = e^{-4x} \\\\\n",
+    "%\n",
+    "u_1 &= - \\int \\frac{x e^{-2x} \\cosh x}{e^{-4x}} dx + c_1 = -\\int \\frac{x \\frac{1}{2}(e^x + e^{-x})}{e^{-2x}} dx + c_1 \\\\\n",
+    " &= -\\frac{1}{2} \\int x (e^{3x} + e^x) dx + c_1 = -\\frac{1}{2} \\left[ \\frac{1}{9} e^{3x}(3x-1) + e^x(x-1) \\right] + c_1 \\\\\n",
+    "u_1 &= -\\frac{1}{18} e^{3x}(3x-1) - \\frac{1}{2} e^x (x-1) + c_1 \\\\\n",
+    "%\n",
+    "u_2 &= \\int \\frac{e^{-2x} \\cosh x}{e^{-4x}} dx + c_2 = \\frac{1}{2} \\int e^{2x}(e^x + e^{-x}) dx + c_2 = \\frac{1}{2} \\int (e^{3x} + e^x) dx + c_2 \\\\ \n",
+    "u_2 &= \\frac{1}{6} e^{3x} + \\frac{1}{2} e^x + c_2\n",
+    "\\end{align}\n",
+    "\n",
+    "Then, when we put these all together, we get the full (complicated) solution:\n",
+    "\\begin{equation}\n",
+    "y(x) = \\left[ -\\frac{1}{18} e^{3x} (3x-1) - \\frac{1}{2} e^x (x-1) + c_1 \\right] e^{-2x} + \\left( \\frac{1}{6} e^{3x} + \\frac{1}{2} e^x + c_2 \\right) x e^{-2x}\n",
+    "\\end{equation}"
    ]
   }
  ],
